<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="@dimen/margin_8dp"
    android:fillViewport="true"
    android:isScrollContainer="false">

    <LinearLayout xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/layout_16dp_margin"
        android:orientation="vertical"
        android:focusable="true"
        android:focusableInTouchMode="true">

        <TextView
            android:id="@+id/user_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:layout_gravity="center"
            android:layout_marginBottom="@dimen/margin_8dp"
            app:cardCornerRadius="@dimen/spacing"
            app:contentPadding="@dimen/margin_8dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/first_question"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:lineSpacingExtra="@dimen/spacing"
                    android:text="@string/first_question_lol" />

                <RadioGroup
                    android:id="@+id/first_question_radio_group"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <RadioButton
                        android:id="@+id/first_question_first_radio_button"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/question_one_answer_1_lol" />

                    <RadioButton
                        android:id="@+id/first_question_second_radio_button"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/question_one_answer_2_lol" />

                    <RadioButton
                        android:id="@+id/first_question_third_radio_button"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/question_one_answer_3_lol" />

                </RadioGroup>
            </LinearLayout>
        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:layout_gravity="center"
            android:layout_marginBottom="@dimen/margin_8dp"
            app:cardCornerRadius="@dimen/spacing"
            app:contentPadding="@dimen/margin_8dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/second_question_lol"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:lineSpacingExtra="@dimen/spacing"
                    android:text="@string/second_question_lol" />

                <CheckBox
                    android:id="@+id/first_question_lol_cb"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/question_two_answer_1_lol" />

                <CheckBox
                    android:id="@+id/second_question_lol_cb"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/question_two_answer_2_lol" />

                <CheckBox
                    android:id="@+id/third_question_lol_cb"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/question_two_answer_3_lol" />

            </LinearLayout>
        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:layout_gravity="center"
            android:layout_marginBottom="@dimen/margin_8dp"
            app:cardCornerRadius="@dimen/spacing"
            app:contentPadding="@dimen/margin_8dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/fourth_question"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:lineSpacingExtra="@dimen/spacing"
                    android:text="@string/fourth_question_lol" />

                <RadioGroup
                    android:id="@+id/fourth_question_radio_group"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <RadioButton
                        android:id="@+id/fourth_question_first_radio_button"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/question_four_answer_1_lol" />

                    <RadioButton
                        android:id="@+id/fourth_question_second_radio_button"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/question_four_answer_2_lol" />

                    <RadioButton
                        android:id="@+id/fourth_question_third_radio_button"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/question_four_answer_3_lol" />

                </RadioGroup>
            </LinearLayout>
        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:layout_gravity="center"
            android:layout_marginBottom="@dimen/margin_8dp"
            app:cardCornerRadius="@dimen/spacing"
            app:contentPadding="@dimen/margin_8dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/third_question_lol"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:lineSpacingExtra="@dimen/spacing"
                    android:text="@string/third_question_lol" />

                <EditText
                    android:id="@+id/pl_edittext"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:hint="@string/lol_edittext_hint"
                    android:imeOptions="actionDone"
                    android:inputType="textCapWords" />

            </LinearLayout>
        </android.support.v7.widget.CardView>

        <Button
            android:id="@+id/result_button_lol"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/result_button"
            android:layout_marginBottom="@dimen/layout_16dp_margin"/>

    </LinearLayout>
</ScrollView>