<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    tools:context="com.example.android.quizzapp.MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/layout_16dp_margin"
        android:orientation="vertical"
        android:focusable="true"
        android:focusableInTouchMode="true">

        <Button
            android:id="@+id/lol_launch_button"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:adjustViewBounds="false"
            android:contentDescription="TODO"
            android:cropToPadding="false"
            android:textSize="@dimen/launch_activity_button_text_size"
            android:text="@string/lol_button" />

        <Button
            android:id="@+id/powerlifting_launch_button"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:adjustViewBounds="false"
            android:contentDescription="TODO"
            android:textSize="@dimen/launch_activity_button_text_size"
            android:cropToPadding="false"
            android:text="@string/powerlifting_button" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/instructions"
            android:layout_marginTop="@dimen/margin_8dp"
            android:layout_marginBottom="@dimen/margin_8dp"
            android:gravity="center"
            android:textSize="@dimen/instructions_title_size"/>

        <TextView
            android:id="@+id/instructions_text"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginBottom="@dimen/margin_8dp"
            android:layout_marginTop="@dimen/margin_8dp"
            android:layout_weight="2"
            android:text="@string/tutorial"
            android:justificationMode="inter_word"
            android:lineSpacingExtra="@dimen/spacing"/>
        <EditText
            android:id="@+id/name_textfield"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/enter_name_hint"
            android:inputType="textCapWords"/>
    </LinearLayout>
</ScrollView>
